Price update and layout fix Updated prices upon Diego and Michal's request. Fixed layout for Chrome in Windows 7 and up, this fix breaks the layout in Chromium on Linux

--- a/rom1125/WebContent/scss/common.scss
+++ b/rom1125/WebContent/scss/common.scss
@@ -47,7 +47,7 @@ body {background-color: $bg-color;}
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
 
   #header_right_image {
-    margin: 0 1px 0 -5px;
+    margin: 0 0 0 -5px;
   }
 
 }
